<resources>
    <string name="app_name">Karma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Setting</string>

    <string name="menu_home">Home</string>
    <string name="menu_alert">Alert</string>
    <string name="menu_createAlert">Create Alert</string>
    <string name="record">Record</string>
    <string name="rate_app">Rate App</string>
    <string name="policy">Policy</string>
    <string name="version">Version</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_sign_password">Password must be >5 characters</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUp">Don\'t have an account?<a href="http://www.android4beginners.com"> SignUp</a></string>
    <string name="sign_up">SignUp....</string>
    <string name="btn_sign">SignUp >></string>
    <string name="enter_name">Enter Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="code">Enter the code that was send to</string>
    <string name="verify">Verify</string>
    <string name="resend_again">Resend again?</string>
    <string name="search">Search</string>
    <string name="select_township">Select Township</string>
    <string name="set">Set</string>
    <string-array name="ticket">
        <item>coming soon</item>
        <item>၁ ေစာင်</item>
        <item>၂ ေစာင်</item>
        <item>၃ ေစာင်</item>
        <item>၅ ေစာင်</item>
        <item>၁၀ ေစာင်</item>
        <item>အထူး</item>
    </string-array>
</resources>