<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_home_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
    </group>
    <group android:id="@+id/nav_alert_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/noise"
            android:title="@string/menu_alert" />
    </group>
    <group android:id="@+id/nav_slideshow_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_baseline_add_alert_24"
            android:title="@string/menu_createAlert" />
    </group>
    <group android:id="@+id/nav_record_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_record"
            android:icon="@drawable/clock"
            android:title="@string/record" />
    </group>
    <group
        android:id="@+id/nav_setting_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings" />
    </group>
    <group android:id="@+id/nav_rate_app_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_baseline_star_border_24"
            android:title="@string/rate_app" />
    </group>
    <group android:id="@+id/nav_policy_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/pin"
            android:title="@string/policy" />
    </group>
    <group android:id="@+id/nav_version_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_version"
            android:icon="@drawable/ic_baseline_error_outline_24"
            android:title="@string/version" />
    </group>
    <group android:id="@+id/nav_logout_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>