<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:backgroundTint="@color/lightGrey"
    android:backgroundTintMode="multiply"
    tools:context=".ui.auth.ui.signup.SignUpActivity">
    <TextView
        android:id="@+id/txtSign"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/SignUp_username"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_circle_bg"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:hint="@string/enter_name"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:paddingStart="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSign"
        tools:ignore="RtlSymmetry"
        android:autofillHints="Mg mg" />

    <EditText
    android:id="@+id/SignUp_ph"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="24dp"
    android:hint="@string/phone_number"
    android:paddingStart="15dp"
    android:drawablePadding="10dp"
    android:background="@drawable/edit_circle_bg"
    android:drawableStart="@drawable/ic_baseline_lock_24"
    android:inputType="phone"
    android:selectAllOnFocus="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/SignUp_username"
    tools:ignore="RtlSymmetry"
    android:importantForAutofill="no" />
    <EditText
        android:id="@+id/SignUp_email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="Enter Email"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit_circle_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_ph"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/SignUp_pass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/prompt_password"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit_circle_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_email"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/SignUp_con_pass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/confirm_password"
        android:paddingStart="15dp"
        android:drawablePadding="10dp"
        android:background="@drawable/edit_circle_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_pass"
        tools:ignore="RtlSymmetry"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:text="@string/btn_sign"
        android:textColor="@color/colorPink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/SignUp_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SignUp_email"
        app:layout_constraintStart_toStartOf="@+id/SignUp_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>