<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:backgroundTint="@color/lightGrey"
    android:backgroundTintMode="multiply"
    tools:context=".ui.auth.ui.verify.VerifyActivity">

    <com.google.android.material.card.MaterialCardView
        android:theme="@style/CardTheme"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/bordervetical"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:backgroundTint="@color/lightGrey"
            android:backgroundTintMode="multiply"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="#019b77"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_numberText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+918372890302"
                android:textAlignment="center"
                android:textColor="#019b77"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.chaos.view.PinView
                android:id="@+id/pinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="#222222"
                android:textSize="18sp"
                app:cursorColor="@color/colorAccent"
                app:cursorWidth="2dp"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="5dp"
                app:itemWidth="36dp"
                app:lineColor="@color/line_color"
                app:lineWidth="2dp"
                app:viewType="rectangle" />

            <Button
                android:id="@+id/submit2"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_main_backgroung"
                android:text="@string/verify"
                android:textColor="@color/colorPink"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#019b77"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/resend_again"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>